create, update, delete producer