@@ -1,13 +1,17 @@
 package com.example.cmsbe.services.producer;
 
 import com.example.cmsbe.common.constant.CMSConstant;
+import com.example.cmsbe.dto.FileDTO;
 import com.example.cmsbe.dto.request.ProducerRequest;
 import com.example.cmsbe.dto.response.ProducerResponse;
 import com.example.cmsbe.entity.Producer;
 import com.example.cmsbe.repositories.ProducerRepository;
+import com.example.cmsbe.services.minio.MinIOService;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.util.ObjectUtils;
+import org.springframework.web.multipart.MultipartFile;
 import org.webjars.NotFoundException;
 
 import java.sql.Timestamp;
@@ -15,30 +19,33 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Service
 public class ProducerService implements IProducerService{
 
-    @Autowired
     private final ProducerRepository producerRepository;
+    private final ModelMapper modelMapper;
+    private final MinIOService minIOService;
 
-    public ProducerService(ProducerRepository producerRepository) {
+
+    @Autowired
+    public ProducerService(ProducerRepository producerRepository, ModelMapper modelMapper, MinIOService minIOService) {
         this.producerRepository = producerRepository;
+        this.modelMapper = modelMapper;
+        this.minIOService = minIOService;
     }
 
-    @Autowired
-    private ModelMapper modelMapper;
-
     @Override
-    public ProducerResponse createProducer(ProducerRequest producerRequest) {
+    public ProducerResponse createProducer(ProducerRequest producerRequest, MultipartFile file) {
         Producer producer = modelMapper.map(producerRequest, Producer.class);
+        FileDTO fileDTO = uploadToMinIO(file);
+        producer.setImage(fileDTO.getUrl());
         producer.setCreateTime(Timestamp.from(Instant.now()));
         return modelMapper.map(producerRepository.save(producer), ProducerResponse.class);
     }
 
     @Override
-    public ProducerResponse updateProducer(ProducerRequest producerRequest, Long id) {
+    public ProducerResponse updateProducer(ProducerRequest producerRequest, Long id, MultipartFile file) {
         producerRepository.findById(id).orElseThrow(() -> new NotFoundException("producer isn't existed"));
         if (!producerRequest.getId().equals(id)) {
             throw new RuntimeException("producer request id not equal id request");
@@ -47,6 +54,8 @@ public class ProducerService implements IProducerService{
         if (producer.getStatus().equals(CMSConstant.DELETE_STATUS)) {
             throw new NotFoundException("producer was deleted");
         }
+        FileDTO fileDTO = uploadToMinIO(file);
+        producer.setImage(fileDTO.getUrl());
         producer.setUpdateTime(Timestamp.from(Instant.now()));
         return modelMapper.map(producerRepository.save(producer), ProducerResponse.class);
     }
@@ -67,8 +76,7 @@ public class ProducerService implements IProducerService{
         List<ProducerResponse> producerResponses = new ArrayList<>();
         List<ProducerResponse> producers = producerRepository.findAll()
                 .stream()
-                .map(x -> modelMapper.map(x, ProducerResponse.class))
-                .collect(Collectors.toList());
+                .map(x -> modelMapper.map(x, ProducerResponse.class)).toList();
         for (ProducerResponse producer : producers) {
             if (!Objects.equals(producer.getStatus(), CMSConstant.DELETE_STATUS)) {
                 producerResponses.add(producer);
@@ -84,5 +92,15 @@ public class ProducerService implements IProducerService{
             throw new NotFoundException("producer was deleted");
         }
         return modelMapper.map(producer, ProducerResponse.class);
+    }
+
+    public FileDTO uploadToMinIO(MultipartFile file) {
+        FileDTO fileDTO = new FileDTO();
+
+        if (!ObjectUtils.isEmpty(file)) {
+            fileDTO.setFile(file);
+            fileDTO = minIOService.uploadFile(fileDTO);
+        }
+        return fileDTO;
     }
 }
